# test_proect_14_2_web

./: .env.example  .gitignore  README.md  alembic.ini  fly.toml  main.py  pyproject.toml  requirements.txt  test.db
app/: main.py
migration/: env.py
migration/versions/: 05b2be47058e_init.py  37afc488dbef_init.py  8cf61dd8c65e_init.py  bfaaeb37f531_init.py  c0805241ede3_init.py  dc565970c241_init.py
src/: schemas.py  schemas_pictures.py
src/conf/: config.py
src/database/: db.py  models.py
src/datebase/: models.py
src/repository/: comments.py  photo.py  pictures.py  users.py
src/routes/: auth.py  comments.py  healthchecker.py  photo.py  picteres.py  roles.py  user_profile.py  users.py
src/services/: auth.py  auth_admin.py  cloud_image.py
tests/: test_repository_pictures.py  test_repository_roles.py  test_repository_users.py  test_route_auth.py  test_route_roles.py  test_route_user_profile.py  test_service_auth.py  test_service_auth_admin.py  test_user_profile.py
